--- a/NcuDirectoryBuilder/NcuDirectoryBuilder.csproj
+++ b/NcuDirectoryBuilder/NcuDirectoryBuilder.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MiqM.Xceed.Wpf.Toolkit.NETCore" Version="3.5.1.3" />
       <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
     </ItemGroup>
 
